force-app/main/default/objects/Asset/fields/Ano__c.field-meta.xml
<CustomField>
    <fullName>Ano__c</fullName>
    <label>Año Modelo</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>