force-app/main/default/objects/Asset/fields/Cilindraje__c.field-meta.xml
<CustomField>
    <fullName>Cilindraje__c</fullName>
    <label>Cilindraje</label>
    <length>40</length>
    <type>Text</type>
</CustomField>