force-app/main/default/objects/Asset/fields/Estado_Bloqueado__c.field-meta.xml
<CustomField>
    <fullName>Estado_Bloqueado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bloqueado</label>
    <type>Checkbox</type>
</CustomField>