force-app/main/default/objects/Asset/fields/Fecha_de_inicio_de_la_pliza__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_inicio_de_la_pliza__c</fullName>
    <label>Fecha de inicio de la póliza</label>
    <type>Date</type>
</CustomField>