force-app/main/default/objects/Asset/fields/Fecha_de_inicio_del_soat__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_inicio_del_soat__c</fullName>
    <label>Fecha de inicio del soat</label>
    <type>Date</type>
</CustomField>