force-app/main/default/objects/Asset/fields/Fecha_de_vencimiento_poliza_todo_riesgo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_vencimiento_poliza_todo_riesgo__c</fullName>
    <label>Fecha de vencimiento póliza todo riesgo</label>
    <type>Date</type>
</CustomField>