force-app/main/default/objects/Asset/fields/Grupo_vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Grupo_vehiculo__c</fullName>
    <label>Grupo vehículo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>