force-app/main/default/objects/Asset/fields/Id_Vehiculo_ERP__c.field-meta.xml
<CustomField>
    <fullName>Id_Vehiculo_ERP__c</fullName>
    <description>UNOEE identificador único</description>
    <label>VIN</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>