force-app/main/default/objects/Asset/fields/Mayor_105__c.field-meta.xml
<CustomField>
    <fullName>Mayor_105__c</fullName>
    <label>Clase Vehiculo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>