force-app/main/default/objects/Asset/fields/Mayor_106__c.field-meta.xml
<CustomField>
    <fullName>Mayor_106__c</fullName>
    <label>Tipo Carrocería</label>
    <length>255</length>
    <type>Text</type>
</CustomField>