force-app/main/default/objects/Asset/fields/Mayor_107__c.field-meta.xml
<CustomField>
    <fullName>Mayor_107__c</fullName>
    <label>No Puertas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>