force-app/main/default/objects/Asset/fields/Mayor_H30__c.field-meta.xml
<CustomField>
    <fullName>Mayor_H30__c</fullName>
    <label>Descripción del vehículo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>