force-app/main/default/objects/Asset/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <label>Línea</label>
    <length>255</length>
    <type>Text</type>
</CustomField>