force-app/main/default/objects/Asset/fields/Motivo_Bloqueo__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Bloqueo__c</fullName>
    <label>Motivo Bloqueo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>