force-app/main/default/objects/Asset/fields/Numero_Chasis__c.field-meta.xml
<CustomField>
    <fullName>Numero_Chasis__c</fullName>
    <label>Numero Chasis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>