force-app/main/default/objects/Asset/fields/Plan_105__c.field-meta.xml
<CustomField>
    <fullName>Plan_105__c</fullName>
    <label>Plan 105</label>
    <length>255</length>
    <type>Text</type>
</CustomField>