force-app/main/default/objects/Asset/fields/Plan_106__c.field-meta.xml
<CustomField>
    <fullName>Plan_106__c</fullName>
    <label>Plan 106</label>
    <length>255</length>
    <type>Text</type>
</CustomField>