force-app/main/default/objects/Asset/fields/Plan_107__c.field-meta.xml
<CustomField>
    <fullName>Plan_107__c</fullName>
    <label>Plan 107</label>
    <length>255</length>
    <type>Text</type>
</CustomField>