force-app/main/default/objects/Asset/fields/Plan_H30__c.field-meta.xml
<CustomField>
    <fullName>Plan_H30__c</fullName>
    <label>Plan_H30</label>
    <length>255</length>
    <type>Text</type>
</CustomField>