force-app/main/default/objects/Asset/fields/Relacionado_con_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Relacionado_con_Cuenta__c</fullName>
    <formula>AccountId &lt;&gt; null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relacionado con Cuenta</label>
    <type>Checkbox</type>
</CustomField>