force-app/main/default/objects/Asset/fields/Tipo_Vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Vehiculo__c</fullName>
    <label>Tipo Vehiculo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VEHICULOS HONDA</fullName>
            </value>
            <value>
                <fullName>VEHICULOS OTRAS MARCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>