force-app/main/default/objects/Asset/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <label>Número de Serie/VIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>