force-app/main/default/objects/Asset/recordTypes/Vehiculo.recordType-meta.xml
<RecordType>
    <fullName>Vehiculo</fullName>
    <active>true</active>
    <label>Vehículo</label>
</RecordType>