force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>Id_Vehiculo_ERP__c</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Placa__c</columns>
    <columns>VIN__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset.Vehiculo</value>
    </filters>
    <label>Todos los vehiculos</label>
</ListView>